# capdl

./: .gitignore  .hgignore  .licenseignore  .stylefilter  CHANGES  CHANGES.md  CMakeLists.txt  Findcapdl.cmake  Kbuild  Kconfig  Main.hs  Makefile  Matrix.hs  README  README.md  STCC.hs  Setup.hs  VERSION  cap-dist-elf-simpleserver.cdl  cap-dist-elf-simpleserver.right  capDL-tool.cabal  example-arm.cdl  example-arm.right  example-ia32.cdl  example-ia32.right  example.cdl  hello-dump.cdl  hello-dump.right  ideas.txt
.github/workflows/: build.yml  push.yml
.reuse/: dep5
CapDL/: #Model.hs#  .#Model.hs  AST.hs  DumpParser.hs  MakeModel.hs  Matrix.hs  Model.hs  Parser.hs  ParserUtils.hs  PrintC.hs  PrintDot.hs  PrintIsabelle.hs  PrintModel.hs  PrintUtils.hs  PrintXml.hs  STCC.hs  State.hs
LICENSES/: LicenseRef-Trademark.txt
capDL-tool/: .gitignore  Main.hs  Makefile  README.md  Setup.hs  camkes-adder-arm.cdl  camkes-adder-arm.object_sizes.yaml  camkes-adder-arm.right  camkes-adder-arm.thy.right  cap-dist-elf-simpleserver.cdl  cap-dist-elf-simpleserver.right  capDL-tool.cabal  capDL-tool.cmake  capdl.dtd  example-aarch64.cdl  example-aarch64.right  example-arm.cdl  example-arm.right  example-ia32.cdl  example-ia32.right  example.cdl  hello-dump.cdl  hello-dump.right  iwana-ia32.cdl  shell.nix  stack.yaml
capDL-tool/CapDL/: AST.hs  DumpParser.hs  MakeModel.hs  Matrix.hs  Model.hs  Parser.hs  ParserUtils.hs  PrintC.hs  PrintDot.hs  PrintIsabelle.hs  PrintJSON.hs  PrintModel.hs  PrintUtils.hs  PrintXml.hs  STCC.hs  State.hs
capDL-tool/doc/: Makefile  README.md  capDL.md  capDL.tex  csiro.sty  disy.sty
capDL-tool/doc/tex/: .gitignore  Makefile  capDL.tex  sel4.sty
capDL-tool/tools/: capdl.vim
capdl/: Allocator.py  Cap.py  ELF.py  Object.py  PageCollection.py  Spec.py  __init__.py  util.py
capdl-loader-app/: CMakeLists.txt  Kbuild  Kconfig  Makefile  README.md  helpers.cmake
capdl-loader-app/include/: capdl.h  capdl_spec.h  debug.h
capdl-loader-app/src/: check.c  check.h  entry.h  main.c
cdl_utils/: README.md  capdl_linker.py  untyped_gen.py
cdl_utils/templates/: cspace.template.c
doc/: capDL.tex
examples/: construct-address-space.py
include/: capdl.h  capdl_spec.h  debug.h
object_sizes/: CMakeLists.txt  README.md  object_sizes.yaml
python-capdl-tool/: .gitignore  README.md  requirements.txt
python-capdl-tool/capdl/: Allocator.py  Cap.py  ELF.py  Object.py  PageCollection.py  Spec.py  __init__.py  util.py
python-capdl-tool/examples/: allocation.py  capdl-manipulation.py  construct-address-space.py  to-capdl.py
python-capdl-tool/tests/: __init__.py  allocator.py  elf.py  merge.py  runall.py  runall.sh  testelf.py  testmerge.py
python-capdl-tool/tests/arm-elf/: is-identified-as-arm.py
python-capdl-tool/tests/ia32-elf/: is-identified-as-ia32.py
python-capdl-tool/tests/merge/: merge.py
python-capdl-tool/tests/pylint/: pylint.sh
python-capdl-tool/tests/symbol-lookup/: symbol-table-access.py
src/: main.c
tests/arm-elf/: is-identified-as-arm.py
tests/merge/: merge.py
tools/: capdl.vim
