--
-- Copyright 2020, Data61, CSIRO (ABN 41 687 119 230)
--
-- SPDX-License-Identifier: BSD-2-Clause
--

name:                capDL-tool
version:             1.0.0.1
synopsis:            A tool for processing seL4 capDL specifications.
license:             BSD2
author:              Gerwin Klein (Proofcraft), Corey Lewis (Proofcraft), Matthew Fernandez (Data61), Japheth Lim (Data61)
maintainer:          corey.lewis@proofcraft.systems
homepage:            https://github.com/seL4/capdl
copyright:           Data61, CSIRO
                     UNSW
                     Proofcraft
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.18
tested-with:         GHC == 8.8.4, GHC == 9.0.2

executable parse-capDL
  main-is:             Main.hs

  other-extensions:    DeriveDataTypeable,
                       FlexibleContexts,
                       FlexibleInstances,
                       TypeSynonymInstances,
                       TemplateHaskell

  build-depends:
                       -- Included libraries
                       array >=0.5 && <0.6,
                       base >= 4.13 && <4.16,
                       containers >=0.6 && <0.7,
                       filepath >=1.4 && <1.5,
                       mtl >=2.2 && <2.3,
                       parsec >=3.1 && <3.2,
                       unix >=2.7 && <3,

                       -- Other libraries
                       base-compat >= 0.11 && <0.12,
                       lens >= 4.15,
                       MissingH >=1.4 && <1.6,
                       pretty >=1.1 && <1.2,
                       regex-compat >= 0.90,
                       split >=0.2 && <0.3,
                       yaml >=0.8 && <0.12

  other-modules:       CapDL.AST, CapDL.DumpParser, CapDL.MakeModel,
                       CapDL.Matrix, CapDL.Model, CapDL.Parser,
                       CapDL.ParserUtils, CapDL.PrintC, CapDL.PrintDot,
                       CapDL.PrintIsabelle, CapDL.PrintModel,
                       CapDL.PrintUtils, CapDL.PrintXml, CapDL.STCC,
                       CapDL.State

  default-language:    Haskell2010

  ghc-options:         -O2 -Werror -Wall -fno-warn-name-shadowing
                       -fno-warn-missing-signatures -fno-warn-type-defaults
